fixed background size issue. changed from 100% to cover to fix whitespace-at bottom of page

--- a/Assets/custom.css
+++ b/Assets/custom.css
@@ -12,7 +12,7 @@ body {
 body {
     margin: auto;
     background-image: url('./Grass.jpg');
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
